--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,20 @@ gunicorn==21.2.0
 
 # psycopg2-binary
 # mysqlclient
+asgiref==3.8.1
+cffi==1.16.0
+cryptography==42.0.5
+Django==4.2.9
+django-admin-material-dashboard==1.0.10
+gunicorn==21.2.0
+packaging==24.0
+pycparser==2.22
+PyMySQL==1.1.0
+python-decouple==3.4
+python-dotenv==1.0.1
+setuptools==69.5.1
+sqlparse==0.5.0
+str2bool==1.1
+tzdata==2024.1
+Unipath==1.1
+whitenoise==6.6.0
